--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="UTF-8">
 
     <title>AngularJS Todo App</title>
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,500,700,900' rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,700,900' rel='stylesheet' type='text/css'>
     <link href="assets/styles/main.css" rel="stylesheet">
 
 </head>
